flux/apps/haproxy-dashboard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: haproxy-dashboard
