flux/apps/haproxy-dashboard/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: haproxy-dashboard

spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-system

  hostnames:
    - 'haproxy.yuki.no'

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /stats
      backendRefs:
        - name: haproxy-reader
          port: 3210

    - backendRefs:
          - name: haproxy-dashboard
            port: 3310
